--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -14,9 +14,11 @@ title: 11ty Boilerplate
   <nav>
     <ul>
       <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/about/" title="About the boilerplate">About</a></li>
+      <li><a href="/about/" title="Phone">Phone</a></li>
+      <li><a href="/wallet/" title="Wallet">Wallet</a></li>
     </ul>
   </nav>
+    {% mainHeading %}
     {{ content }}
 </body>
 </html>
