--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,9 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Everyday Carry
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<h1>3 Things I wont leave home without</h1>
+<h2>Phone</h2>
+<h2>Wallet</h2>
+<h2>Keys</h2>
