--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -11,14 +11,9 @@ title: 11ty Boilerplate
   <link rel="stylesheet" href="/styles/screen.css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="/" title="Go home">Home</a></li>
-      <li><a href="/about/" title="Phone">Phone</a></li>
-      <li><a href="/wallet/" title="Wallet">Wallet</a></li>
-    </ul>
-  </nav>
+    {% include 'nav' %}
     {% mainHeading %}
     {{ content }}
 </body>
+<footer>Ike Conner</footer>
 </html>
