--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,14 +1,14 @@
 body {
     font-family: Helvetica, sans-serif;
     color: #000000;
-    background: #2ecaa3;
+    background-image: linear-gradient(to bottom, #2ecaa3, #ffffff);
     padding: 0 40px;
     text-align: center;
 }
 
 nav {
     margin: 40px auto 0 auto;
-    width: 300px;
+    width: 370px;
     border-radius: 50px;
     background: #000000;
 }
@@ -37,6 +37,7 @@ h1 {
     font-size: 4em;
     letter-spacing: -2px;
 }
+
 h2 {
     font-size: 3em;
     letter-spacing: -1px;
@@ -48,4 +49,21 @@ h1 strong {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 3px rgb(255, 255, 255);
+}
+
+footer {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 2em;
+}
+
+img.keys {
+    border: 5px solid;
+}
+
+img.phone {
+    border: 10px solid;
+}
+
+img.wallet{
+    border: 7px solid;
 }
